	PR target/40473 	* config/rs6000/rs6000.c (rs6000_output_function_prologue): Don't 	call final to emit non-scheduled prologue, instead insert at entry.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@152056 138bc75d-0d04-0410-961f-82ee72b054a4